Added functionality for training stints. changed model architecture.

--- a/create_address_txt.ipynb
+++ b/create_address_txt.ipynb
@@ -2,24 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 1 / 10\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
-    "# from itertools import islice\n",
     "from IPython.display import clear_output\n",
     "from natsort import natsorted, ns\n",
+    "import math\n",
     "\n",
-    "filedir = \"C:/WonkyDoodles/qd_png\"\n",
-    "# filedir = '//LAPTOP-NCIKG438/Cempos python scripts/Doodles/quickdraw_dataset_png'\n",
+    "filedir = \"E:/WonkyDoodles/qd_png\"\n",
     "\n",
-    "limit_ratio = 1/10\n"
+    "n_steps = 10\n",
+    "step = 1\n",
+    "\n",
+    "print(f\"Step {step} / {n_steps}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -37,17 +47,16 @@
     "    \n",
     "    files = natsorted(os.listdir(f\"{filedir}/{dir}\"), alg=ns.IGNORECASE)\n",
     "    dir_len = len(files)\n",
-    "    dir_len_limit = dir_len * limit_ratio\n",
+    "    files = files[int(math.floor( ((step-1)/n_steps) * len(files) )) : int( math.ceil((step/n_steps) * len(files)) ) - 1]\n",
+    "\n",
     "    with open(f\"{filedir}/{dir}/address_list.txt\", 'w') as f:\n",
-    "        for idx, file in enumerate(files[:dir_len-1]):\n",
-    "            if idx > dir_len_limit: break\n",
-    "            f.write(f\"{filedir}/{dir}/{file}\\n\")\n",
-    "            "
+    "        for file in files:\n",
+    "            f.write(f\"{filedir}/{dir}/{file}\\n\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
