cleaned up the dir. set up dir for training.

--- a/create_address_txt.ipynb
+++ b/create_address_txt.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 1 / 10\n"
+      "Stint 1 / 10\n"
      ]
     }
    ],
@@ -21,15 +21,15 @@
     "\n",
     "filedir = \"E:/WonkyDoodles/qd_png\"\n",
     "\n",
-    "n_steps = 10\n",
-    "step = 1\n",
+    "n_stints = 10\n",
+    "stint = 1\n",
     "\n",
-    "print(f\"Step {step} / {n_steps}\")\n"
+    "print(f\"Stint {stint} / {n_stints}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,8 +46,8 @@
     "    print(dir)\n",
     "    \n",
     "    files = natsorted(os.listdir(f\"{filedir}/{dir}\"), alg=ns.IGNORECASE)\n",
-    "    dir_len = len(files)\n",
-    "    files = files[int(math.floor( ((step-1)/n_steps) * len(files) )) : int( math.ceil((step/n_steps) * len(files)) ) - 1]\n",
+    "    # dir_len = len(files)\n",
+    "    files = files[int(math.floor( ((stint-1)/n_stints) * len(files) )) : int( math.ceil((stint/n_stints) * len(files)) ) - 1]\n",
     "\n",
     "    with open(f\"{filedir}/{dir}/address_list.txt\", 'w') as f:\n",
     "        for file in files:\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
